make bower config private=false for publishing

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Wingspan Technology Inc."
   ],
   "license": "MIT",
-  "private": true,
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
