--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "grunt-contrib-jshint": "~0.7.1",
         "grunt-contrib-requirejs": "~0.4.1",
         "grunt-bower-task": "~0.3.4",
-        "grunt-contrib-clean": "~0.5.0"
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-karma": "~0.6.2"
     }
 }
