--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "almond": "~0.2.7",
-    "react": "0.10.0"
+    "react": "0.10.0",
+    "underscore": "~1.4.4"
   }
 }
