--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
-  "name": "work-area demo",
-  "version": "0.0.0",
-  "homepage": "https://github.com/wingspan/wingspan-forms",
+  "name": "React Cursor",
+  "version": "0.9.0",
+  "homepage": "https://github.com/dustingetz/react-cursor",
   "authors": [
+    "Dustin Getz",
     "Wingspan Technology Inc."
   ],
   "license": "MIT",
