--- a/examples/helloworld/bower.json
+++ b/examples/helloworld/bower.json
@@ -18,7 +18,6 @@
     "jquery": "~1.9.1",
     "underscore": "~1.4.4",
     "react": "~0.10.0",
-    "requirejs": "~2.1.9",
-    "wingspan-contrib": "2b47b0f177aeb2086378b4e5ff8af3ef61b82e5d"
+    "requirejs": "~2.1.9"
   }
 }
