--- a/examples/helloworld/package.json
+++ b/examples/helloworld/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wingspan-cursor-example",
+  "name": "react-cursor-example",
   "version": "0.0.1",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Wingspan Technology, Inc.",
+  "contributors": ["Dustin Getz", "Wingspan Technology, Inc."],
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
