--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "wingspan-cursor",
-    "version": "0.1.0",
+    "name": "react-cursor",
+    "version": "0.9.0",
     "description": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Wingspan Technology, Inc.",
+    "contributors": ["Dustin Getz", "Wingspan Technology, Inc."],
     "license": "MIT",
     "devDependencies": {
         "grunt": "~0.4.1",
