--- a/examples/helloworld/package.json
+++ b/examples/helloworld/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "contributors": ["Dustin Getz", "Wingspan Technology, Inc."],
+  "contributors": [
+    "Dustin Getz",
+    "Wingspan Technology, Inc."
+  ],
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -17,6 +20,11 @@
     "grunt-bower-task": "~0.3.4",
     "grunt-subgrunt": "~0.2.4",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "react": "~0.11.2",
+    "underscore": "~1.7.0",
+    "reactify": "~0.14.0",
+    "browserify": "~5.12.0",
+    "grunt-browserify": "~3.0.1"
   }
 }
