--- a/examples/helloworld/package.json
+++ b/examples/helloworld/package.json
@@ -18,9 +18,9 @@
     "grunt-react": "~0.8.2",
     "grunt-contrib-clean": "~0.5.0",
     "react": "~0.11.2",
-    "underscore": "~1.7.0",
     "reactify": "~0.14.0",
     "browserify": "~5.12.0",
-    "grunt-browserify": "~3.0.1"
+    "grunt-browserify": "~3.0.1",
+    "lodash-node": "~2.4.1"
   }
 }
