--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-karma": "~0.6.2",
     "grunt-browserify": "~3.0.1",
-    "uglifyify": "~2.5.0",
     "underscore": "~1.7.0",
-    "react": "~0.11.2"
+    "react": "~0.11.2",
+    "lodash-node": "~2.4.1"
   }
 }
