--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "uglifyify": "~2.5.0",
     "underscore": "~1.7.0",
     "react": "~0.11.2"
+  },
+  "dependencies": {
+    "array-union": "^1.0.0",
+    "deep-equal": "^0.2.1",
+    "omit-keys": "^0.1.0"
   }
 }
