Add Daniel Miladinov as a contributor in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dustin Getz",
   "contributors": [
     "Dustin Getz",
+    "Daniel Miladinov",
     "Wingspan Technology, Inc."
   ],
   "repository": {
