--- a/package.json
+++ b/package.json
@@ -24,22 +24,25 @@
     "chai": "^1.9.2",
     "es5-shim": "^4.0.3",
     "grunt": "~0.4.5",
-    "grunt-browserify": "~3.0.1",
+    "grunt-browserify": "~3.2.0",
     "grunt-cli": "~0.1.9",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-jshint": "~0.7.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "~0.6.2",
+    "grunt-karma": "^0.9.0",
     "grunt-mocha": "^0.4.11",
-    "mocha": "^1.21.5",
-    "react": "~0.11.2",
-    "uglifyify": "~2.5.0",
+    "karma": "^0.12.24",
+    "mocha": "^2.0.1",
+    "react": "~0.12.0",
+    "uglifyify": "~2.6.0",
     "underscore": "~1.7.0"
   },
   "dependencies": {
     "array-union": "^1.0.0",
     "deep-equal": "^0.2.1",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "omit-keys": "^0.1.0"
   }
 }
