--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.9.0",
-    "grunt-mocha": "^0.4.11",
+    "grunt-mocha-phantomjs": "^0.7.0",
     "karma": "^0.12.24",
     "mocha": "^2.0.1",
     "react": "~0.12.0",
