--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cursor",
-  "version": "1.1.0-SNAPSHOT",
+  "version": "1.1.0",
   "homepage": "https://github.com/dustingetz/react-cursor",
   "authors": [
     "Dustin Getz",
