--- a/package.json
+++ b/package.json
@@ -18,26 +18,32 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "grunt test"
+    "test": "karma start",
+    "start": "node server.js",
+    "build": "webpack",
+    "dist": "webpack --config webpack.dist.js"
   },
   "main": "./src/react-cursor.js",
   "devDependencies": {
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
+    "babelify": "^6.1.3",
     "chai": "^1.9.2",
     "es5-shim": "^4.0.3",
-    "grunt": "~0.4.5",
-    "grunt-browserify": "~3.2.0",
-    "grunt-cli": "~0.1.9",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.9.0",
-    "grunt-mocha-phantomjs": "^0.7.0",
-    "karma": "^0.12.24",
+    "karma": "0.12.37",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "1.6.0",
     "mocha": "^2.0.1",
     "react": "~0.13.3",
     "uglifyify": "~2.6.0",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "array-union": "^1.0.0",
