--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^5.3.2",
     "babelify": "^6.1.3",
     "chai": "^1.9.2",
+    "clone": "^1.0.2",
     "es5-shim": "^4.0.3",
     "karma": "0.12.37",
     "karma-chai": "^0.1.0",
