--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cursor",
-  "version": "1.2.0",
+  "version": "2.0.0-alpha.1",
   "description": "Functional state management abstraction for use with Facebook React",
   "keywords": [
     "react",
