Not get property names from primitives.
- ES5 declare that, throws TypeError when call
  `Object.getOwnPropertyNames` on primitives.
- Reference:
  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object/getOwnPropertyNames#Notes

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "array-union": "^1.0.0",
     "deep-equal": "^0.2.1",
+    "lodash": "^3.10.1",
     "omit-keys": "^0.1.0"
   }
 }
