--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "1.6.0",
     "mocha": "^2.0.1",
-    "react": "~0.13.3",
+    "react": "^0.14.2",
+    "react-addons-test-utils": "^0.14.2",
     "uglifyify": "~2.6.0",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
@@ -47,6 +48,7 @@
   "dependencies": {
     "array-union": "^1.0.0",
     "deep-equal": "^0.2.1",
-    "omit-keys": "^0.1.0"
+    "omit-keys": "^0.1.0",
+    "react-addons-update": "^0.14.2"
   }
 }
