--- a/examples/mutations/package.json
+++ b/examples/mutations/package.json
@@ -1,32 +1,8 @@
 {
-  "name": "react-hot-boilerplate",
-  "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "version": "0.0.1",
   "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
+    "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack"
-  ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
-  },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
@@ -35,14 +11,13 @@
     "eslint-plugin-react": "^2.3.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
-    "react-cursor": "^1.1.0",
-    "react-hot-loader": "^1.2.7",
     "style-loader": "^0.12.3",
     "underscore": "^1.8.3",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
-    "react": "^0.13.0"
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   }
 }
