extract update-in into separate dependency

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "deep-equal": "^0.2.1",
     "lodash.isobject": "^3.0.2",
     "omit-keys": "^0.1.0",
-    "react-addons-update": "^0.14.2"
+    "react-addons-update": "^0.14.2",
+    "update-in": "0.0.1-alpha.2"
   }
 }
