--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "webpack",
     "dist": "webpack --config webpack.dist.js"
   },
-  "main": "./src/react-cursor.js",
+  "main": "./dist/react-cursor.js",
+  "jsnext:main": "src/react-cursor.js",
   "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
