--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "array-union": "^1.0.0",
-    "deep-equal": "^0.2.1",
-    "lodash.isobject": "^3.0.2",
-    "omit-keys": "^0.1.0",
+    "lodash.identity": "^3.0.0",
+    "lodash.isequal": "^4.0.0",
+    "lodash.isobject": "^3.0.0",
+    "lodash.omit": "^4.0.0",
+    "lodash.reduce": "^4.0.0",
     "react-addons-update": "^0.14.2",
     "update-in": "0.0.1-alpha.4"
   }
