--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
   "dependencies": {
     "array-union": "^1.0.0",
     "deep-equal": "^0.2.1",
+    "lodash.identity": "^3.0.0",
     "lodash.isobject": "^3.0.2",
+    "lodash.reduce": "^4.0.1",
     "omit-keys": "^0.1.0",
     "react-addons-update": "^0.14.2",
     "update-in": "0.0.1-alpha.4"
