--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cursor",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-alpha.13",
   "description": "Immutable recursive UI state management",
   "keywords": [
     "react",
@@ -19,13 +19,17 @@
     "test": "karma start",
     "start": "node server.js",
     "build": "webpack",
-    "dist": "webpack --config webpack.dist.js"
+    "dist": "webpack --config webpack.dist.js",
+    "lib": "BABEL_ENV=commonjs babel src --out-dir lib"
   },
   "main": "./dist/react-cursor.js",
   "jsnext:main": "src/react-cursor.js",
   "devDependencies": {
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6",
+    "babel-loader": "^6",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babelify": "^6.1.3",
     "chai": "^1.9.2",
     "clone": "^1.0.2",
