--- a/package.json
+++ b/package.json
@@ -31,23 +31,26 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^6.1.3",
-    "chai": "^1.9.2",
+    "chai": "^3.2",
     "clone": "^1.0.2",
     "es5-shim": "^4.0.3",
-    "karma": "0.12.37",
+    "karma": "0.13",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.1.1",
-    "karma-sinon-chai": "^1.1.0",
+    "karma-chrome-launcher": "^1.0",
+    "karma-firefox-launcher": "^1.0",
+    "karma-mocha": "^1.0",
+    "karma-mocha-reporter": "^2.0",
     "karma-sourcemap-loader": "^0.3.5",
-    "karma-webpack": "1.6.0",
+    "karma-sinon-chai": "^1.1.0",
+    "karma-webpack": "1.7.0",
     "lodash": "^3.10.1",
+    "lolex": "^1.5.0",
     "mocha": "^2.0.1",
     "react": "^0.14.2",
     "react-addons-test-utils": "^0.14.2",
-    "uglifyify": "~2.6.0",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0",
+    "uglifyify": "~3.0",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   },
